# flodar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flodar.toml
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml
docker/: Dockerfile
docs/: api.md  architecture.md  configuration.md  index.html  installation.md  metrics.md  tests.md
examples/: flodar.full.toml  prometheus.yml
flodar/: Cargo.toml  flodar.toml
flodar/src/: lib.rs  main.rs
flodar/src/analytics/: metrics.rs  mod.rs  window.rs
flodar/src/api/: handlers.rs  metrics.rs  mod.rs  state.rs
flodar/src/collector/: mod.rs
flodar/src/decoder/: flow_record.rs  ipfix.rs  mod.rs  netflow_v5.rs  netflow_v9.rs  template_cache.rs
flodar/src/detection/: alert.rs  mod.rs
flodar/src/detection/rules/: destination_hotspot.rs  mod.rs  port_scan.rs  syn_flood.rs  udp_flood.rs
flodar/src/storage/: alert_store.rs  flow_store.rs  mod.rs
flodar/src/webhook/: mod.rs
flodar/tests/: integration.rs
flowgen/: Cargo.toml
flowgen/src/: main.rs
grafana/provisioning/dashboards/: dashboard.yml  flodar-overview-with-logs.json  flodar-overview.json
