[package]
name = "flodar"
version = "1.0.0-beta"
edition = "2021"

[lib]
name = "flodar"
path = "src/lib.rs"

[[bin]]
name = "flodar"
path = "src/main.rs"

[features]
loki = ["dep:tracing-loki", "dep:url"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
axum = "0.7"
prometheus = "0.14"
tracing-loki = { version = "0.2", optional = true }
url = { version = "2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
duckdb = { version = "1", features = ["bundled"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
