[package]
name = "flowgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flowgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
